gcc/testsuite/gfortran.dg/select_type_21.f90
! { dg-do compile }
! PR fortran/45848
! PR fortran/47204
!
select type (a) ! { dg-error "Selector shall be polymorphic" }
end select
end
